See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.66.00

              pnmmargin: fix for size 0 and superfluous "unexpected operator" 
              message with size != 0.  Introduced in 10.42.

              pstopnm: fix wrong interpretations of -xsize and -ysize when
              rendering image in landscape (rotated).  This can appear as
              stretching and squashing.  Probably always broken.

              pstopnm: fix wrong orientation sometimes when you specify
              both -xsize and -ysize.  Introduced in 10.65.

              ppmrelief: fix out-of-bound values in output.  Always broken.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              ppmrelief: fix crash when input image is too small.  Always
              broken.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pamdeinterlace: fix incorrect output with -takeodd and image has
              only one row.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              build/install: add tools for creating a Debian package.

              make package: Include template for pkgconfig file.

              make package: Include a man/web directory with .url files for
              each manual page.

              test: Add -portrait to invocations of pstopnm in order to get
              proper round trips.

13.12.26 BJH  Release 10.65.00

              pamfunc: add -changemaxval.

              pgmkernel: add -maxval.

              Recognize SIGPWR on systems that have it in messages
              about signal received.

              pstopnm: More rational default for landscape/portrait choice.
              In particular, if the image or page is square, image will always
              be in portrait (not rotated).

              brushtopbm: check for read errors, extraneous data after apparent
              end of image.
