@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.66.00
 
+              pgmramp: add -diagonal.  Thanks Prophet of the Way
+              <afu@wta.att.ne.jp>.
+
               pnmmargin: fix for size 0 and superfluous "unexpected operator" 
               message with size != 0.  Introduced in 10.42.
 
@@ -16,6 +19,9 @@ not yet  BJH  Release 10.66.00
               pstopnm: fix wrong orientation sometimes when you specify
               both -xsize and -ysize.  Introduced in 10.65.
 
+              pgmramp: fix bogus output with really large images.  Thanks
+              Prophet of the Way <afu@wta.att.ne.jp>.
+
               ppmrelief: fix out-of-bound values in output.  Always broken.
               Thanks Prophet of the Way <afu@wta.att.ne.jp>.
 
@@ -23,7 +29,9 @@ not yet  BJH  Release 10.66.00
               broken.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.
 
               pamdeinterlace: fix incorrect output with -takeodd and image has
-              only one row.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.
+              only one row.  Always broken (pamdeinterlace was introduced in
+              Netpbm 9.21 (January 2001)).  Thanks Prophet of the Way
+              <afu@wta.att.ne.jp>.
 
               build/install: add tools for creating a Debian package.
 
